samples/OK/fcalls0.php
<?php
declare(strict_types=1);
function mozzarella(int $i, int $j, int $k) : int
{
    return 10;
}
mozzarella(1,2,3);
