samples/SEMANTIC_ERROR/return_nonempty_void.php
<?php
declare(strict_types=1);
function foo(int $i) : void
{
    //ERROR[6]
    return $i;
}